create new form but i have to Improvement

--- a/index.html
+++ b/index.html
@@ -46,12 +46,82 @@
           <div class="container">
             <div class="row">
                 <center><h4 style="margin: 6%;">Recent transactions list</h4></center>
+              <div class="col" style="background-color: beige; padding: 3%; border-radius: 5%;" >
+                <form>
+                    <div class="form-row" >
+                      <div class="form-group col-md-6">
+                        <label >Entertainment</label>
+                        <input type="text" class="form-control" id="Entertainmentform" placeholder="Entertainment">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label>Food</label>
+                        <input type="text" class="form-control" id="Foodform" placeholder="Food">
+                      </div>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label>Health</label>
+                        <input type="text" class="form-control" id="Healthform" placeholder="Health">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label>Transportation</label>
+                        <input type="text" class="form-control" id="Transportationform" placeholder="Transportation">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label>Other</label>
+                        <input type="text" class="form-control" id="Otherform" placeholder="Other">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label>income</label>
+                        <input type="text" class="form-control" id="incomeform" placeholder="income">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label>saveing</label>
+                        <input type="text" class="form-control" id="saveingform" placeholder="saveing"> 
+                      </div>
+                      <button type="text" class="btn btn btn-success" style="margin-top: 2%;" onclick="addfrom()">Submit</button>
+                    </div>
+                  </form> 
+              </div>
+              <div class="col">
+                2 of 2
+              </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+          <div class="container">
+            <div class="row">
+                <center><h4 style="margin: 6%;">Recent transactions list</h4></center>
               <div class="col">
            
                   <ul class="list-group" id="uList">
 
                     </ul>
               </div>
+              
+
+
+
+
+
+
+
+
+
+
+
+
+
+
               <div class="col">
                 <div class="col">
                     <input type="text" class="form-control mt-5 p-2" id="txtTask" placeholder="Description">
